--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -88,3 +88,22 @@ li {
   align-items: center;
   cursor: pointer;
 }
+
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 1;
+}
+
+.modal{
+  width : 85%;
+  background: #1d2c3b;
+  border-radius: 10px;
+  height : calc(100vh - 130px);
+  z-index: 5;
+  position: absolute;
+}
