--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -107,3 +107,21 @@ li {
   z-index: 5;
   position: absolute;
 }
+.modaldelete{
+  width : 90%;
+  background: white;
+  border-radius: 10px;
+  height : 280px;
+  z-index: 10;
+  position: absolute;
+  margin-top: 30%;
+}
+.backdropdelete{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 9;
+}
